--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,1 +1,2 @@
-/* здесь используйте глобальные селекторы img, body, html и так далее */
+// Базовая типографика для Проекта Cat Energy
+// ------------------------------------------
