--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -1,4 +1,27 @@
+// Стили для блока Page
+//---------------------
+
+.page {
+  height: 100%;
+}
+
+.page__wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  margin: 0 auto;
+}
+
 .page__header {
-  color: #000000;
-  padding: 10px 15px;
+  padding: 0;
+  margin: 0 auto;
+}
+
+.page__container {
+  flex-grow: 1;
+}
+
+.page__footer {
+  background-color: $bg-second;
 }
