--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,2 +1,14 @@
 // Базовая типографика для Проекта Cat Energy
 // ------------------------------------------
+
+body {
+  width: 100%;
+  padding: 0;
+  margin: 0 auto;
+  font-family: $base-font;
+  font-weight: $base-font-weight;
+  font-size: 16px;
+  line-height: 24px;
+  color: $base-text-content;
+  background-color: $bg-base;
+}
