--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,2 +1,47 @@
 // Переменные для Проекта Cat Energy
 // ---------------------------------
+
+// Шрифты проекта
+// ------
+
+$base-font: "Lato", "Arial", sans-serif;
+$secondary-font: "Oswald", "Arial", sans-serif;
+
+$base-font-weight: 400;
+
+// Цвет шрифта
+// -------------
+$base-text: #000000;
+$secondary-text: #ffffff;
+$base-text-light: #111111;
+$base-text-lighten: #222222;
+$base-text-content: #444444;
+
+// Цвет фона
+// -----------
+$bg-base: #ffffff;
+$bg-second: #f2f2f2;
+$bg-special: #eaeaea;
+$bg-accent: #68b738;
+
+// Цвет кнопок
+// -------------
+$btn-base: #68b738;
+$btn-base-hover: #5eaa2f;
+$btn-base-active: #5eaa2f;
+$btn-secondary: #f2f2f2;
+$btn-secondary-hover: #ebebeb;
+$btn-secondary-active: #ebebeb;
+$btn-disabled: #f2f2f2;
+
+// Цвет рамки
+// -------
+$border-base: #e6e6e6;
+$border-base-dark: #d9d9d9;
+$border-base-darker: #cdcdcd;
+
+$border-input: #e7e7e7;
+$border-input-hover: #cdcdcd;
+$border-input-active: #444444;
+$border-input-focus: #444444;
+$border-input-error: #ff8282;
