--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -2,14 +2,24 @@
 //---------------------------------------------
 
 /* Common */
-@import "./common/global.scss";
 @import "./common/variables.scss";
+@import "./common/mixins.scss";
 @import "./common/fonts.scss";
+@import "./common/global.scss";
+@import "./common/visually-hidden.scss";
 
 /* Blocks */
 //Элементы блоков "Главной страницы"
 @import "./blocks/page.scss";
-
-//Элементы блоков страницы "Каталог"
-
-//Элементы блоков страницы "Форма"
+@import "./blocks/navigation.scss";
+@import "./blocks/intro.scss";
+@import "./blocks/container.scss";
+@import "./blocks/button.scss";
+@import "./blocks/programs.scss";
+@import "./blocks/advantages.scss";
+@import "./blocks/result.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/additionally.scss";
+@import "./blocks/promotions.scss";
+@import "./blocks/form.scss";
+@import "./blocks/contacts.scss";
