Подключает отвалившиеся шрифты

--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -40,7 +40,7 @@
     content: "";
     height: 362px;
     background-size: cover;
-    background-image: url("/../images/background/map-bg-mobile@1x.png");
+    background-image: url("../../images/background/map-bg-mobile@1x.png");
     background-position: center;
     background-repeat: no-repeat;
   }
