--- a/source/styles/blocks/intro.scss
+++ b/source/styles/blocks/intro.scss
@@ -18,7 +18,7 @@
     height: 305px;
     background-color: $bg-accent;
     background-size: cover;
-    background-image: url("/../images/background/intro-bg-mobile@1x.png");
+    background-image: url("../../images/background/intro-bg-mobile@1x.png");
     background-repeat: no-repeat;
     background-position: center;
   }
