--- a/source/styles/blocks/additionally.scss
+++ b/source/styles/blocks/additionally.scss
@@ -78,7 +78,7 @@
     width: 100%;
     height: 290px;
     background-color: $bg-accent;
-    background-image: url("/../images/background/present-bg-mobile@1x.png");
+    background-image: url("../../images/background/present-bg-mobile@1x.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
