--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -17,13 +17,12 @@
 }
 
 .contacts__subtitle {
+  @include subtitle;
   padding: 0;
   margin: 0;
-  font-family: $secondary-font;
   font-size: 16px;
   line-height: 20px;
   color: $base-text-light;
-  text-transform: uppercase;
 }
 
 .contacts__address-text {
