--- a/source/styles/blocks/intro.scss
+++ b/source/styles/blocks/intro.scss
@@ -25,14 +25,11 @@
 }
 
 .intro__title {
+  @include title;
   position: relative;
   padding: 0;
   margin: 0;
   margin-bottom: 25px;
-  font-family: $secondary-font;
-  font-size: 32px; //Временно изменила размер шрифта с 36 на 32
-  line-height: 36px;
-  color: $secondary-text;
   text-align: center;
   z-index: 0;
 }
@@ -56,6 +53,7 @@
 }
 
 .intro__button {
+  @include button;
   display: block;
   width: 280px;
   font-size: 16px;
