--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,9 +1,14 @@
 // Переменные для Проекта Cat Energy
 // ---------------------------------
 
-// Шрифты проекта
-// ------
+// Сетка
+// -------
+$table-width: 768px;
+$desktop-width: 1440px;
 
+
+// Шрифты проекта
+// ----------------
 $base-font: "Lato", "Arial", sans-serif;
 $secondary-font: "Oswald", "Arial", sans-serif;
 
@@ -35,7 +40,7 @@ $btn-secondary-active: #ebebeb;
 $btn-disabled: #f2f2f2;
 
 // Цвет рамки
-// -------
+// ------------
 $border-base: #e6e6e6;
 $border-base-dark: #d9d9d9;
 $border-base-darker: #cdcdcd;
