--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -5,19 +5,21 @@
   width: 100%;
   padding: 0;
   margin: 0;
-  background-color: $bg-second;
+  background-color: $bg-base;
 }
 
 .contacts__wrapper {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   padding: 26px 0;
   margin: 0;
-  background-color: $bg-base;
 }
 
 .contacts__subtitle {
   @include subtitle;
+  display: block;
+  width: 130px;
   padding: 0;
   margin: 0;
   font-size: 16px;
@@ -26,6 +28,10 @@
 }
 
 .contacts__address-text {
+  display: block;
+  width: 140px;
+  padding: 0;
+  margin: 0;
   font-size: 14px;
   line-height: 20px;
   font-style: normal;
