--- a/source/styles/blocks/intro.scss
+++ b/source/styles/blocks/intro.scss
@@ -15,7 +15,7 @@
     position: absolute;
     content: "";
     width: 100%;
-    height: 305px;
+    height: 302px;
     background-color: $bg-accent;
     background-size: cover;
     background-image: url("../../images/background/intro-bg-mobile@1x.png");
@@ -27,8 +27,9 @@
 .intro__title {
   @include title;
   position: relative;
-  padding: 0;
-  margin: 0;
+  max-width: 250px;
+  padding: 27px 0 0;
+  margin: 0 auto;
   margin-bottom: 25px;
   text-align: center;
   z-index: 0;
@@ -36,19 +37,23 @@
 
 .intro__slogan {
   position: relative;
+  max-width: 250px;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   margin-bottom: 29px;
   font-family: $secondary-font;
   font-size: 14px;
   line-height: 14px;
   color: $secondary-text;
   text-align: center;
+  text-transform: uppercase;
   z-index: 0;
 }
 
 .intro__image {
   position: relative;
+  width: 280px;
+  height: 270px;
   z-index: 0;
 }
 
@@ -56,6 +61,8 @@
   @include button;
   display: block;
   width: 280px;
+  padding: 7px 10px;
+  margin: 0;
   font-size: 16px;
   line-height: 20px;
 }
