--- a/source/styles/blocks/logo.scss
+++ b/source/styles/blocks/logo.scss
@@ -3,6 +3,15 @@
 
 .logo {
   text-decoration: none;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active,
+  &:focus-visible {
+    opacity: 0.6;
+  }
 }
 
 .logo__icon {
