--- a/source/styles/blocks/logo.scss
+++ b/source/styles/blocks/logo.scss
@@ -18,10 +18,49 @@
   display: block;
   width: 33px;
   height: 38px;
+
+  @media (min-width: $tablet-width) {
+    width: 60px;
+    height: 50px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 70px;
+    height: 59px;
+  }
 }
 
 .logo__text {
   display: block;
   width: 101px;
   height: 18px;
+
+  .header__logo & {
+    padding: 10px;
+  }
+
+  .footer & {
+    width: 128px;
+    height: 24px;
+  }
+
+  &:hover,
+  &:focus-visible {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+
+  @media (min-width: $tablet-width) {
+    .header__logo & {
+      padding: 16px 0;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 118px;
+    height: 21px;
+  }
 }
