--- a/source/styles/blocks/navigation.scss
+++ b/source/styles/blocks/navigation.scss
@@ -4,78 +4,133 @@
   position: relative;
   display: grid;
   grid-column: 1/ -1;
-  width: 100%;
-
-  &--closed .navigation__toggle {
-    @include toggle;
-    top: -45px;
-    right: 1px;
-    width: 24px;
-    height: 24px;
-    background-image: url("../../icons/toggle-open.svg");
-  }
 
   &--closed .navigation__list {
-    display: none; // Временное правило для работы с РР
-  }
-
-  &--opened .navigation__toggle {
-    @include toggle;
-    top: -44px;
-    right: -2px;
-    width: 21px;
-    height: 21px;
-    background-image: url("../../icons/toggle-close.svg");
-  }
-
-  &--nojs .navigation__toggle {
     display: none;
+
+    @media (min-width: $tablet-width) {
+      display: grid;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    grid-column: 3/ -1;
+    justify-content: flex-end;
+    align-items: center;
   }
 }
 
 .navigation__list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  max-width: 280px;
   margin: 0;
+  padding: 0;
   text-align: center;
   list-style: none;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: min-content 1fr 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    gap: 10px 23px;
+    max-width: 528px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+    grid-template-columns: min-content 1fr 1fr;
+    gap: 10px 31px;
+    max-width: 622px;
+    z-index: 1;
+  }
 }
 
 .navigation__item {
   display: block;
-  width: 100%;
+  min-width: 320px;
+  margin-left: -20px;
   border-top: 1px solid $border-base;
 
   &:last-child {
     border-bottom: 1px solid $border-base;
   }
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+    min-width: 65px;
+    border: none;
+
+    &:last-child {
+      border-bottom: none;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    text-align: end;
+    margin: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: end;
+    margin: 0;
+  }
 }
 
 .navigation__link {
+  position: relative;
   display: block;
-  padding: 22px 0;
-  margin: 0;
+  min-width: 320px;
+  padding: 22px 10px;
   font-family: $secondary-font;
   font-size: 20px;
-  line-height: 21px;
+  line-height: 20px;
   color: $base-text;
   text-transform: uppercase;
   text-decoration: none;
+  box-sizing: border-box;
 
   &:hover {
-    color: $base-text;
-    opacity: 0.1;
+    color: $base-text-hover;
   }
 
-  &:active {
-    color: $base-text;
-    opacity: 0.6;
-  }
-
+  &:active,
   &:focus-visible {
-    color: $base-text;
-    opacity: 0.6;
+    color: $base-text-pressed;
+  }
+
+  &:disabled {
+    color: $text-disabled;
+    pointer-events: none;
+  }
+
+  @media (min-width: $tablet-width) {
+    min-width: 65px;
+    font-size: 18px;
+    line-height: 24px;
+    padding: 5px;
+    border: none;
+
+    &--current::after {
+      position: absolute;
+      content: "";
+      bottom: -10px;
+      display: block;
+      width: calc(100% - 10px);
+      border-bottom: 2px solid $border-accent;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 1px;
+    font-size: 20px;
+    line-height: 30px;
+    color: $secondary-text;
+
+    &--current::after {
+      bottom: -7px;
+      border-bottom: 2px solid $border-secondary;
+    }
   }
 }
