--- a/source/styles/blocks/programs.scss
+++ b/source/styles/blocks/programs.scss
@@ -2,35 +2,49 @@
 //-------------------------
 
 .programs {
-  display: flex;
-  flex-direction: column;
-  padding: 23px 0 0;
-  margin: 0;
+  display: block;
+  padding-top: 17px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
 }
 
 .programs__list {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 22px;
   padding: 0;
   margin: 0;
   list-style: none;
+
+  @media (min-width: $tablet-width) {
+    gap: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px 80px;
+  }
 }
 
 .programs__item {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  padding: 30px 20px 22px;
+  display: grid;
+  grid-template-columns: 1fr;
+  max-width: 280px;
+  padding: 30px 0 0;
   margin: 0;
   background-color: $bg-second;
+  box-sizing: border-box;
 
   &::before {
     position: absolute;
     display: block;
     content: "";
-    top: 24px;
-    left: 21px;
+    top: 25px;
+    left: 20px;
     width: 50px;
     height: 50px;
     background-color: $bg-accent;
@@ -53,36 +67,124 @@
     position: absolute;
     display: block;
     content: "";
-    top: 21px;
+    top: 22px;
     left: 13px;
     width: 67px;
     height: 55px;
     background-image: url("../../icons/programs/cat-pro.svg");
     background-repeat: no-repeat;
   }
+
+  @media (min-width: $tablet-width) {
+    max-width: 708px;
+    padding: 77px 0 27px;
+
+    &::before {
+      top: 92px;
+      left: 445px;
+      width: 200px;
+      height: 200px;
+    }
+
+    &--slim::after {
+      top: 81px;
+      left: 475px;
+      width: 140px;
+      height: 194px;
+    }
+
+    &--pro::after {
+      top: 135px;
+      left: 415px;
+      width: 268px;
+      height: 112px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 570px;
+    padding: 76px 38px 42px;
+
+    &::before {
+      top: 46px;
+      left: 52px;
+      width: 100px;
+      height: 100px;
+    }
+
+    &--slim::after {
+      top: 40px;
+      left: 67px;
+      width: 70px;
+      height: 97px;
+    }
+
+    &--pro::after {
+      top: 66px;
+      left: 35px;
+      width: 134px;
+      height: 56px;
+    }
+  }
 }
 
 .programs__subtitle {
   @include subtitle ;
-  max-width: 165px;
-  padding: 0;
-  margin: 0 0 29px 71px;
+  max-width: 210px;
+  padding: 0 20px;
+  margin: 0 0 29px 70px;
   font-size: 24px;
   line-height: 37px;
+
+  @media (min-width: $tablet-width) {
+    max-width: 340px;
+    margin: 0 0 24px 32px;
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 265px;
+    margin: 0 0 72px 156px;
+    font-size: 36px;
+    line-height: 36px;
+  }
 }
 
 .programs__description {
-  padding: 0 0 22px;
-  margin: 0 0 19px;
+  max-width: 280px;
+  padding: 0 0 21px;
+  margin: 0 20px;
   font-size: 14px;
   line-height: 18px;
   border-bottom: 1px solid $border-base-dark;
+  box-sizing: border-box;
+
+  @media (min-width: $tablet-width) {
+    max-width: 375px;
+    padding: 0 0 37px 32px;
+    font-size: 16px;
+    line-height: 24px;
+    border: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 570px;
+    padding: 0 0 0 14px;
+    margin: 0;
+    margin-bottom: 12px;
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 .programs__link {
   display: flex;
+  justify-content: flex-start;
+  align-items: center;
   gap: 15px;
-  padding: 0;
+  max-width: 200px;
+  padding: 20px 21px;
   margin: 0;
   font-family: $secondary-font;
   font-size: 16px;
@@ -90,15 +192,53 @@
   color: $base-text;
   text-transform: uppercase;
   text-decoration: none;
+  box-sizing: border-box;
 
   &::after {
     position: relative;
     display: block;
     content: "";
-    top: 2px;
     width: 27px;
     height: 12px;
-    background-image: url("../../icons/arrow-right.svg");
-    background-repeat: no-repeat;
+    mask-size: 27px 12px;
+    mask-image: url("../../icons/arrow-right.svg");
+    mask-repeat: no-repeat;
+    background-color: $icon-base;
+  }
+
+  &:hover {
+    &::after {
+      width: 32px;
+      height: 12px;
+      mask-size: 32px 12px;
+    }
+  }
+
+  &:active,
+  &:focus-visible {
+    color: $base-text;
+    opacity: 0.3;
+
+    &::after {
+      width: 32px;
+      height: 12px;
+      mask-size: 32px 12px;
+      background-color: $icon-base;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    gap: 24px;
+    max-width: 195px;
+    padding: 15px 16px;
+    margin-left: 37px;
+    margin-bottom: 15px;
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 15px;
+    margin: 0;
   }
 }
