--- a/source/styles/blocks/result.scss
+++ b/source/styles/blocks/result.scss
@@ -3,58 +3,142 @@
 
 .result {
   width: 100%;
-  padding: 25px 0 39px;
-  margin: 0;
+  padding: 25px 0 40px;
   background-color: $bg-special;
+
+  @media (min-width: $tablet-width) {
+    padding: 46px 0 95px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 23px 0 76px;
+    background-image: linear-gradient($bg-base 25%, $bg-second 25%);
+  }
+}
+
+.result__wrapper {
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+    grid-template-columns: 444px 224px;
+    gap: 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-rows: repeat(4, min-content);
+    grid-template-columns: 1fr 1fr;
+    gap: 0 93px;
+  }
 }
 
 .result__heading {
   @include heading;
+  max-width: 280px;
   padding: 0;
   margin: 0;
   margin-bottom: 40px;
   font-size: 36px;
   line-height: 40px;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / -1;
+    max-width: 465px;
+    margin-bottom: 20px;
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    margin-bottom: 105px;
+  }
 }
 
 .result__description {
+  max-width: 280px;
   padding: 0;
   margin: 0;
   margin-bottom: 20px;
   font-size: 14px;
   line-height: 18px;
+  box-sizing: border-box;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / -1;
+    max-width: 708px;
+    margin-bottom: 14px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 2;
+    grid-row: 2/ 3;
+    width: 433px;
+    margin-bottom: 28px;
+  }
 }
 
 .result__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 55px 25px;
+  gap: 0 30px;
+  max-width: 280px;
   padding: 0;
   margin: 0;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   text-align: center;
   list-style: none;
-}
 
-.result__item {
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: center;
-  width: 125px;
-  padding: 0;
-  text-align: center;
+  @media (min-width: $tablet-width) {
+    grid-template-rows: 72px 25px;
+    gap: 0 44px;
+    max-width: 367px;
+    margin-bottom: 45px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 2;
+    margin-bottom: 5px;
+  }
 }
 
 .result__criterion {
-  display: block;
+  display: grid;
   width: 80px;
-  margin: -9px 0 0;
+  margin: -9px auto 0;
   font-size: 12px;
   line-height: 12px;
   text-transform: lowercase;
   background-color: $bg-special;
+  z-index: 1;
+
+  &--weight {
+    grid-column: 1 / 2;
+    grid-row: 2 / 2;
+  }
+
+  &--time {
+    grid-column: 2 / -2;
+    grid-row: 2 / -2;
+    padding: 0 8px;
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 125px;
+    font-size: 14px;
+    line-height: 14px;
+
+    &--time {
+      padding: 0 8px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    background-color: $bg-second;
+  }
 }
 
 .result__value {
@@ -69,24 +153,74 @@
   border: 1px solid $border-base-darker;
   border-radius: 3px;
   box-sizing: border-box;
+
+  @media (min-width: $tablet-width) {
+    width: 161px;
+    font-size: 30px;
+    line-height: 37px;
+  }
 }
 
 .result__conclusion {
-  width: 240px;
+  display: flex;
+  gap: 3px;
+  width: 186px;
   padding: 0;
-  margin: 0 auto;
-  margin-bottom: 20px;
+  margin: 0 auto 20px;
   font-family: $secondary-font;
   font-size: 14px;
   line-height: 20px;
   color: $base-text;
-  text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 9px;
+    width: 222px;
+    margin-top: 12px;
+    margin-bottom: 0;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 2;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 0;
+    width: 327px;
+    margin: 0;
+    margin-top: -10px;
+  }
+}
+
+.result__number {
+  padding: 0;
+  margin: 0;
+  font-family: $secondary-font;
+  font-size: 14px;
+  line-height: 20px;
+  color: $base-text;
+  text-transform: uppercase;
+  box-sizing: border-box;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
 
 .result__preview {
   display: block;
   width: 280px;
-  height: 256px;
-  background-color: $bg-accent;
+  min-height: 256px;
+  object-fit: contain;
+
+  @media (min-width: $tablet-width) {
+    width: 560px;
+    min-height: 512px;
+    margin: 0 auto;
+  }
 }
