--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -3,7 +3,7 @@
 
 // Размер вьюпорта
 // -----------------
-$table-width: 768px;
+$tablet-width: 768px;
 $desktop-width: 1440px;
 
 
@@ -21,9 +21,15 @@ $secondary-text: #ffffff;
 $base-text-light: #111111;
 $base-text-lighten: #222222;
 $base-text-content: #444444;
+$accent-text: #68b738;
 
-$base-text-disabled: rgba(0, 0, 0, 0.3);
-$secondary-text-pressed:rgba(255, 255, 255, 0.6);
+$base-text-hover: rgba(0, 0, 0, 0.6);
+$base-text-pressed: rgba(0, 0, 0, 0.3);
+
+$secondary-text-hover:rgba(255, 255, 255, 0.6);
+$secondary-text-pressed:rgba(255, 255, 255, 0.3);
+
+$text-disabled: rgba(0, 0, 0, 0.1);
 
 // Цвет фона
 // -----------
@@ -37,13 +43,17 @@ $bg-accent: #68b738;
 $btn-base: #68b738;
 $btn-base-hover: #5eaa2f;
 $btn-base-pressed: #5eaa2f;
+
 $btn-secondary: #f2f2f2;
 $btn-secondary-hover: #ebebeb;
 $btn-secondary-pressed: #ebebeb;
+
 $btn-disabled: #f2f2f2;
 
 // Цвет рамки
 // ------------
+$border-accent: #68b738;
+$border-secondary: #ffffff;
 $border-base: #e6e6e6;
 $border-base-dark: #d9d9d9;
 $border-base-darker: #cdcdcd;
@@ -55,4 +65,8 @@ $border-input-error: #ff8282;
 
 // Цвет иконок
 // ------------
-$icon-base: #666666;
+$icon-base: #000000;
+$icon-base-light: #666666;
+$icon-accent: #68b738;
+
+$icon-accent-pressed: rgba(104, 183, 56, 0.6);
