--- a/source/styles/blocks/logo.scss
+++ b/source/styles/blocks/logo.scss
@@ -39,6 +39,10 @@
     padding: 10px;
   }
 
+  .header__logo--secondary & {
+    padding: 13px 10px 10px;
+  }
+
   .footer & {
     width: 128px;
     height: 24px;
