--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -54,6 +54,7 @@ $btn-disabled: #f2f2f2;
 // ------------
 $border-accent: #68b738;
 $border-secondary: #ffffff;
+$border-base-light: #f2f2f2;
 $border-base: #e6e6e6;
 $border-base-dark: #d9d9d9;
 $border-base-darker: #cdcdcd;
