--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -7,7 +7,18 @@
   width: 100%;
   padding: 0;
   margin: 0;
-  background-color: $bg-base;
+
+  &--primary {
+    background-color: $bg-base;
+  }
+
+  &--secondary {
+    background-color: $bg-second;
+
+    .contacts__wrapper {
+      background-color: $bg-second;
+    }
+  }
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 1fr;
@@ -40,6 +51,10 @@
     max-width: 569px;
     padding: 59px 81px;
     z-index: 1;
+
+    .contacts--secondary & {
+      background-color: $bg-base;
+    }
   }
 }
 
