--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -2,6 +2,7 @@
 //-------------------------
 
 .footer {
+  width: 100%;
   background-color: $bg-second;
 }
 
@@ -9,14 +10,14 @@
   display: grid;
   grid-template-columns: 1fr;
   width: 280px;
-  padding: 22px 0 20px;
+  padding: 22px 0 35px;
   box-sizing: border-box;
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 128px 1fr 163px;
     gap: 121px;
     width: 768px;
-    padding: 45px 30px;
+    padding: 44px 30px;
   }
 
   @media (min-width: $desktop-width) {
