--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -2,23 +2,57 @@
 //---------------------
 
 .form {
-  padding: 0;
-  margin: 0;
+  display: flex;
+  flex-flow: column wrap;
+
+  @media (min-width: $tablet-width) {
+    flex-flow: row wrap;
+  }
 }
 
 .form__input {
-  padding: 0;
+  width: 280px;
+  padding: 13px 11px;
   margin: 0;
-  margin-bottom: 16px;
+  margin-bottom: 15px;
   font-family: $secondary-font;
   font-size: 20px;
   line-height: 29px;
   color: $base-text-content;
   text-transform: uppercase;
-  border: 1px solid $border-base-darker;
+  border: 1px solid $border-input;
+  box-sizing: border-box;
+
+  .error & {
+    border: 1px solid $border-input-error;
+  }
+
+  &:hover {
+    border: 1px solid $border-input-hover;
+  }
+
+  &:active,
+  &:focus-visible {
+    border: 1px solid $border-input-pressed;
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 376px;
+    padding: 13px 12px;
+    margin: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 496px;
+  }
 }
 
 .form__button {
+  padding: 15px 10px;
   font-size: 20px;
   line-height: 26px;
+
+  @media (min-width: $tablet-width) {
+    width: 256px;
+  }
 }
