--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -2,19 +2,42 @@
 //------------------------
 
 .header {
+  position: relative;
+  display: grid;
+  width: 100%;
+  box-sizing: border-box;
+
+  @media (min-width: $tablet-width) {
+    gap: 0 35px;
+    width: 768px;
+    padding: 25px 30px 5px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr;
+    width: 1440px;
+    padding: 55px 110px 5px;
+  }
+}
+
+.header__wrapper {
   display: grid;
   grid-template-columns: 33px 121px 1fr;
   gap: 14px 46px;
-  padding: 13px 0 0;
+  min-width: 280px;
+  padding: 13px 20px 14px;
+  margin: 0 auto;
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 60px 101px 1fr;
     gap: 0 13px;
-    padding: 26px 0 0;
+    min-width: 176px;
+    padding: 0;
+    margin: 0;
   }
 
   @media (min-width: $desktop-width) {
     grid-template-columns: 70px 118px 1fr;
-    padding: 57px 0 0;
   }
 }
