--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -24,6 +24,7 @@
 @import "./blocks/result.scss";
 @import "./blocks/slider.scss";
 @import "./blocks/catalog.scss";
+@import "./blocks/product.scss";
 @import "./blocks/additionally.scss";
 @import "./blocks/promotions.scss";
 @import "./blocks/form.scss";
