Вносит правки в стилизацию блока catalog. Неудачная попытка в фиксации кнопки-бургера в навигации

--- a/source/styles/blocks/additionally.scss
+++ b/source/styles/blocks/additionally.scss
@@ -180,7 +180,7 @@
     text-align: end;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     text-align: start;
   }
 }
