--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -2,35 +2,39 @@
 //------------------------
 
 .catalog {
-  padding-top: 25px;
+  width: 100%;
+}
+
+.catalog__wrapper {
+  min-width: 100%;
+  padding: 0;
+  margin: 0 auto;
+  border-top: 1px solid $border-base-dark;
 
   @media (min-width: $tablet-width) {
-    padding-top: 60px;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding-top: 70px;
+    border: none;
   }
 }
 
 .catalog__title {
   @include title;
   width: 280px;
-  padding: 0;
+  padding: 26px 0 0;
   margin: 0 auto 40px;
   color: $base-text;
 
   @media (min-width: $tablet-width) {
     width: 708px;
+    padding: 60px 0 0;
     margin: 0 auto 60px;
     font-size: 60px;
     line-height: 60px;
   }
 
   @media (min-width: $desktop-width) {
-    width: 720px;
-    padding: 0 30px;
-    margin: 0 80px 61px;
+    width: 1220px;
+    padding: 70px 0 0;
+    margin: 0 auto 61px;
   }
 }
 
@@ -65,6 +69,10 @@
   margin: 0 auto;
   border-top: 1px solid $border-base;
   box-sizing: border-box;
+
+  &:last-child {
+    border-bottom: 1px solid $border-base;
+  }
 
   @media (min-width: $tablet-width) {
     width: 320px;
@@ -201,8 +209,8 @@
     display: grid;
     justify-content: center;
     width: 320px;
-    padding: 34px 35px 38px;
-    margin: 105px auto 0;
+    padding: 13px 35px 15px;
+    margin: 104px auto 0;
     border: 2px solid $border-base-light;
   }
 
@@ -216,6 +224,7 @@
   position: relative;
   display: grid;
   grid-template-columns: 280px;
+  padding: 79px 0 24px;
   background-size: 30px 30px;
   background-image: url("../../icons/plus.svg");
   background-position: 50% 15%;
@@ -228,19 +237,22 @@
     width: 250px;
     text-align: center;
     background-size: 60px 60px;
-    background-position: 50% 5%;
+    background-position: 50% 11%;
   }
 
   @media (min-width: $desktop-width) {
     width: 169px;
+    padding: 0;
+    margin: 0;
+    background-position: 50% 5%;
   }
 }
 
 .catalog__download-title {
   position: relative;
-  width: 203px;
-  padding: 58px 15px 0;
-  margin: 0 auto;
+  width: 223px;
+  padding: 0 10px;
+  margin: 0 auto 9px;
   margin-bottom: 9px;
   font-family: $secondary-font;
   font-weight: $base-font-weight;
@@ -252,7 +264,7 @@
 
   @media (min-width: $tablet-width) {
     width: 175px;
-    padding: 101px 0 0;
+    padding: 45px 0 0;
     margin: 0 auto;
     margin-bottom: 0;
     font-size: 20px;
@@ -265,7 +277,7 @@
 }
 
 .catalog__download-text {
-  width: 219px;
+  width: 249px;
   padding: 0 15px;
   margin: 0 auto 20px;
   font-size: 12px;
@@ -276,5 +288,10 @@
     margin-bottom: 33px;
     font-size: 16px;
     line-height: 18px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 175px;
+    padding: 0;
   }
 }
