--- a/source/styles/blocks/contacts.scss
+++ b/source/styles/blocks/contacts.scss
@@ -49,8 +49,8 @@
   @media (min-width: $desktop-width) {
     grid-column: 2/ 3;
     grid-row: 2/ 3;
-    width: 569px;
-    padding: 59px 81px;
+    width: 565px;
+    padding: 59px 73px 59px 85px;
     z-index: 1;
 
     .contacts--secondary & {
@@ -129,6 +129,8 @@
 }
 
 .contacts__map iframe {
+  display: block;
   width: 100%;
   height: 100%;
+  border: none;
 }
