--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -38,6 +38,7 @@ $bg-second: #f2f2f2;
 $bg-special: #eaeaea;
 $bg-accent: #68b738;
 
+$bg-image: #62a539;
 // Цвет кнопок
 // -------------
 $btn-base: #68b738;
