--- a/source/styles/blocks/promotions.scss
+++ b/source/styles/blocks/promotions.scss
@@ -18,26 +18,51 @@
 
 .promotions__heading {
   @include heading;
+  position: relative;
+  width: fit-content;
   padding: 0;
   margin: 0;
   margin-bottom: 32px;
   font-size: 24px;
   line-height: 24px;
+  background: $bg-base;
+  box-shadow: -30px 0 0 0 $bg-base, 40px 0 0 0 $bg-base;
+
+  &::before {
+    position: absolute;
+    top: 9px;
+    right: 0;
+    display: block;
+    content: "";
+    width: 100vw;
+    height: 2px;
+    background: $border-accent;
+    box-shadow: 100vw 0 0 0 $border-accent;
+    z-index: -1;
+  }
 
   @media (min-width: $tablet-width) {
-    width: 282px;
-    padding: 0 40px;
+    padding: 0 0 0 40px;
     margin-bottom: 67px;
     font-size: 32px;
     line-height: 32px;
+    box-shadow: 30px 0 0 0 $bg-base, 40px 0 0 0 $bg-base;
+
+    &::before {
+      top: 16px;
+    }
   }
 
   @media (min-width: $desktop-width) {
-    width: 290px;
     padding: 0;
     margin-bottom: 73px;
     font-size: 40px;
     line-height: 40px;
+    box-shadow: -41px 0 $bg-base, 40px 0 $bg-base;
+
+    &::before {
+      top: 17px;
+    }
   }
 }
 
