--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -42,6 +42,7 @@
   @media (min-width: $tablet-width) {
     grid-template-columns: repeat(2, 1fr);
     gap: 94px 59px;
+    counter-reset: item;
   }
 
   @media (min-width: $desktop-width) {
@@ -53,14 +54,14 @@
 .advantages__item {
   position: relative;
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: row-reverse wrap;
   gap: 20px;
-  max-width: 280px;
+  width: 280px;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 
-  &::before {
+  &::after {
     position: relative;
     top: -2px;
     display: block;
@@ -68,49 +69,53 @@
     width: 60px;
     height: 60px;
     background-color: $bg-accent;
-
-    @media (min-width: $tablet-width) {
-      width: 80px;
-      height: 80px;
-    }
-  }
-
-  &::after {
-    position: absolute;
-    display: block;
-    content: "";
-    top: 14px;
-    left: 18px;
-    width: 25px;
-    height: 29px;
+    background-position: 50%;
     background-repeat: no-repeat;
-
-    @media (min-width: $tablet-width) {
-      top: 24px;
-      left: 28px;
-    }
   }
 
   &--nutrients::after {
+    background-size: 25px 28px;
     background-image: url("../../icons/advantages/nutrients-icon.svg");
   }
 
   &--powder::after {
+    background-size: 26px 28px;
     background-image: url("../../icons/advantages/powder-icon.svg");
   }
 
   &--eating::after {
+    background-size: 25px 30px;
     background-image: url("../../icons/advantages/eating-icon.svg");
   }
 
   &--time::after {
+    background-size: 26px 31px;
     background-image: url("../../icons/advantages/time-icon.svg");
   }
 
   @media (min-width: $tablet-width) {
     width: 245px;
-    flex-flow: column wrap;
+    flex-flow: column-reverse wrap;
     gap: 30px;
+
+    &::after {
+      width: 80px;
+      height: 80px;
+    }
+
+    &::before {
+      position: absolute;
+      top: -65px;
+      content: counter(item);
+      display: block;
+      font-family: $secondary-font;
+      font-size: 280px;
+      font-weight: $base-font-weight;
+      padding-top: 152px;
+      padding-left: 115px;
+      color: $bg-second;
+      counter-increment: item;
+    }
   }
 }
 
