Проверяет проект на соответствие критериям: чистит дубли в правилах стилей, проверяет на переполнение

--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -24,22 +24,26 @@
   box-sizing: border-box;
 
   .error & {
-    border: 1px solid $border-input-error;
+    border: 2px solid $border-input-error;
   }
 
   &:hover {
-    border: 1px solid $border-input-hover;
+    border: 2px solid $border-input-hover;
   }
 
   &:active,
   &:focus-visible {
-    border: 1px solid $border-input-pressed;
+    border: 2px solid $border-input-pressed;
+  }
+
+  &:disabled {
+    opacity: 0.2;
+    pointer-events: none;
   }
 
   @media (min-width: $tablet-width) {
     width: 376px;
     padding: 13px 12px;
-    margin: 0;
   }
 
   @media (min-width: $desktop-width) {
