--- a/source/styles/blocks/intro.scss
+++ b/source/styles/blocks/intro.scss
@@ -113,6 +113,7 @@
   display: block;
   width: 280px;
   height: 270px;
+  object-fit: contain;
 
   @media (min-width: $tablet-width) {
     width: 709px;
@@ -121,8 +122,8 @@
 
   @media (min-width: $desktop-width) {
     position: absolute;
-    bottom: 52px;
     left: 557px;
+    bottom: 52px;
     width: 552px;
     height: 499px;
   }
@@ -138,8 +139,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    position: absolute;
-    bottom: 185px;
     left: 190px;
+    bottom: 185px;
   }
 }
