--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -57,7 +57,6 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 41px 80px;
     width: 1220px;
-    margin: 0 auto;
   }
 }
 
@@ -84,7 +83,6 @@
   @media (min-width: $desktop-width) {
     width: 245px;
     padding: 32px 37px 39px 34px;
-    background-image: linear-gradient($bg-base 20%, $bg-second 20%);
   }
 }
 
@@ -114,15 +112,14 @@
   padding: 0;
   margin: 0;
   text-decoration: none;
+  overflow: hidden;
 
   &--image {
-    display: grid;
     grid-column: 1/ 2;
     grid-row: 1/ 3;
   }
 
   &--title {
-    display: grid;
     grid-column: 2/ -1;
     grid-row: 1/ 2;
     margin-bottom: 14px;
@@ -138,7 +135,6 @@
     }
 
     &--title {
-      display: grid;
       grid-column: 1/ -1;
       grid-row: 2/ 3;
       margin-bottom: 21px;
@@ -155,6 +151,11 @@
       margin-bottom: 25px;
     }
   }
+}
+
+.catalog__image {
+  display: block;
+  object-fit: cover;
 }
 
 .catalog__subtitle {
@@ -207,7 +208,6 @@
 
   @media (min-width: $tablet-width) {
     display: grid;
-    justify-content: center;
     width: 320px;
     padding: 13px 35px 15px;
     margin: 104px auto 0;
@@ -237,6 +237,7 @@
     width: 250px;
     text-align: center;
     background-size: 60px 60px;
+    background-image: url("../../icons/plus-big.svg");
     background-position: 50% 11%;
   }
 
