--- a/source/styles/blocks/form.scss
+++ b/source/styles/blocks/form.scss
@@ -44,6 +44,7 @@
   @media (min-width: $tablet-width) {
     width: 376px;
     padding: 13px 12px;
+    margin: 0;
   }
 
   @media (min-width: $desktop-width) {
